# vi-django

./: .env.dist  .env.example  .gitignore  .pylintrc  Caddyfile  Dockerfile  README.md  docker-compose.yml  docker-compose_dev.yml  manage.py  pyproject.toml  pytest.ini  start-celery-beat.sh  start-celery-worker.sh  start-django.sh  start-django_dev.sh  start.sh
accounts/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
accounts/templates/: user_detail.html  user_update.html
api/: urls.py
api/v1/: serializers.py  urls.py  views.py
mixins/: timestamped_model_mixin.py  uuid_model_mixin.py
pages/: views.py
templates/: base.html  home.html
theme/static_src/: package-lock.json  package.json  postcss.config.js
theme/static_src/src/: styles.css
theme/templates/: base.html
user_profile/: admin.py  apps.py  forms.py  models.py  periodic_tasks.py  signals.py  tasks.py  tests.py  urls.py  views.py
user_profile/migrations/: 0001_initial.py
user_profile/templates/: user_profile_create.html  user_profile_detail.html  user_profile_list.html  user_profile_update.html
vidjango/: __init__.py  asgi.py  celery.py  settings.py  urls.py  wsgi.py
